# clustrgame

./: DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: clustrgame-package.r  kmeans.r  zzz.r
man/: clustrgame-package.Rd  km_game.Rd
scripts/: bench.r  iris.r
src/: Makevars.in  Rmpi.h  clustrgame_native.c  common.h  kmeans.cpp  kmeans.hh  kmeans_types.hh  mpi_utils.hh  restrict.h  types.h
src/cpu/: init.c  kmeans.c  kmeans.cpp  kmeans.h  kmeans.hh  kmeans_cpu.hh  mpi_utils.h  rand.h  types.h  utils.h  utils.hh
src/gpu/: cu_utils.hh  init.cu
